fixed bags with memCached; simplify the interaction with database

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 database.tableName=user
-database.userNameColumn=name
 database.emailColumn=email
+database.nameColumn=name
 database.passwordColumn=password
