last stable version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=9000
-spring.datasource.url=jdbc:postgresql://localhost:5432/Email
+spring.datasource.url=jdbc:postgresql://auth_postgres:5432/Email
 spring.datasource.username=postgres
 spring.datasource.password=13112000PostgreSQLnyr
